<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ηλεκτρονική Γραμματεία</string>
    <string name="welcome_message">Καλως ορίσατε στην Ηλεκτρονική Γραμματεία του ΤΕΙ Λάρισας</string>
    <string name="my_requests">Οι αιτήσεις μου</string>
    <string name="lessons">Η δήλωσή μου</string>
    <string name="preferences">Ρυθμίσεις</string>
    <string name="user_credentials">Στοιχεία εισόδου</string>
    <string name="username_dialog_message">Παρακαλώ εισάγετε το όνομα χρήστη</string>
    <string name="username">Όνομα χρήστη</string>
    <string name="password_dialog_message">Παρακαλώ εισάγετε τον κωδικό σας</string>
    <string name="password">Κωδικός χρήστη</string>
    <string name="about_app">Περί της εφαρμογής</string>
    <string name="dionysos_error">Ο server της υπηρεσίας dionysos δεν επέστρεψε τα αναμενόμενα αποτελέσματα.</string>
    <string name="missing_username">Παρακαλώ συμπληρώστε το όνομα χρήστη στις ρυθμίσεις της εφαρμογής</string>
    <string name="missing_password">Παρακαλώ συμπληρώστε τον κωδικό του χρήστη στις ρυθμίσεις της εφαρμογής</string>
    <string name="downloading_data">Κατέβασμα δεδομένων</string>
    <string name="downloading_grades">Κατέβασμα μαθημάτων και βαθμολογιών</string>
    <string name="writing_grades">Εγγραφή μαθημάτων και βαθμολογιών στην sdcard</string>
    <string name="connecting">Πραγματοποιείται η σύνδεση με την ηλεκτρονική Γραμματεία</string>
    <string name="connection_error">Δεν υπάρχει διαθέσιμη σύνδεση δεδομένων. Παρακαλώ συνδεθείτε και ξαναπροσπαθήστε.</string>
    <string name="download_success">Το κατέβασμα των δεδομένων ολοκληρώθηκε με επιτυχία.</string>
    <string name="download_fail">Το κατέβασμα των δεδομένων δεν ολοκληρώθηκε επιτυχώς.</string>
    <string name="update_data">Ανανέωση δεδομένων</string>
    <string name="data_information">Πληροφορίες δεδομένων</string>
    <string name="downloading_lessons">Κατέβασμα δήλωσης μαθημάτων</string>
    <string name="writing_lessons">Εγγραφή δήλωσης στην sdcard</string>
    <string name="downloading_requests">Κατέβασμα αιτήσεων</string>
    <string name="writing_requests">Εγγραφή αιτήσεων στην sdcard</string>
    <string name="connecting_error">Σφάλμα σύνδεσης με το διακομιστή της υπηρεσίας</string>
    <string name="downloading_grades_error">Σφάλμα κατά το κατέβασμα των βαθμολογιών</string>
    <string name="writing_grades_error">Σφάλμα κατά την εγγραφή των βαθμολογιών στην sdcard</string>
    <string name="downloading_lessons_error">Σφάλμα κατά το κατέβασμα της δήλωσης μαθημάτων</string>
    <string name="writing_lessons_error">Σφάλμα κατά την εγραφή της δήλωσης στην scdcard</string>
    <string name="downloading_requests_error">Σφάλμα κατά το κατέβασμα των αιτήσεων</string>
    <string name="writing_requests_error">Σφάλμα κατά την εγραφή των αιτήσεων</string>
    <string name="connection_check">Έλεγχος σύνδεσης δεδομένων</string>
    <string name="data">Δεδομένα</string>
    <string name="last_data_download">Τελευταίες ενημερώσεις δεδομένων</string>
    <string name="loading">Φορτώνει…</string>
    <string name="grades">Βαθμολογίες</string>
    <string name="requests">Αιτήσεις</string>
    <string name="update_data_dialog_message">Ανανέωση των δεδομένων αν είναι παλαιότερα από τα λεπτά παρακάτω : </string>
    <string name="update_old_data">Χρόνος ανανέωσης</string>
    <string name="update_old_data_summary">Αν τα δεδομένα είναι παλαιότερα από τόσα λεπτά, θα ανανεωθούν</string>
    <string name="update_data_now">Ανανέωση δεδομένων τώρα</string>
    <string name="username_summary">Το όνομα χρήστη που έχετε στην υπηρεσία dionysos</string>
    <string name="password_summary">Ο κωδικός που χρησιμοποιείτε στην υπηρεσία dionysos</string>
    <string name="data_date">Ημερομηνία δεδομένων : </string>
    <string name="date">Ημερομηνία</string>
    <string name="counter">A/A</string>
    <string name="request_title">Τίτλος αίτησης</string>
    <color name="row_odd">#CCCC99</color>
    <color name="row_even">#CECEB0</color>
    <color name="row_header">#454545</color>
    <string name="semester">Εξάμηνο</string>
    <string name="hours">ώρες</string>
    <string name="ects">ΔΜ</string>
    <string name="not_found">Δε βρέθηκε</string>
    <string name="file_error">Το αρχείο με τα δεδομένα δε βρέθηκε ή είναι κατεστραμμένο.</string>
    <string name="display_old_data">Εμφανίζοντα τα πιο πρόσφατα αποθηκευμένα δεδομένα</string>
    <color name="activity_bg">#E5E5C7</color>
    <color name="text_color">#2D2D2D</color>
    <string name="login_fail_username">Λάθος όνομα χρήστη</string>
    <string name="login_fail_password">Λάθος κωδικός πρόσβασης</string>
    <string name="login_fail">Λανθασμένο όνομα χρήστη ή κωδικός πρόσβασης</string>
    <string name="about_app_text"></string>
    <string name="version">Έκδοση: 1.0</string>
</resources>
