<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon" />

        <TextView
				android:text="@string/app_name"
				android:textSize="15sp"
				android:layout_margin="5dip"
				android:textStyle="bold"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"></TextView>

        <TextView
            android:id="@+id/version"
            android:text="@string/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:gravity="center"
            android:textStyle="italic" >
        </TextView>
        
        <TextView
            android:id="@+id/about_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_text" >
        </TextView>
    </LinearLayout>

</ScrollView>