<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#FFFFFF">

	<TextView
		android:id="@+id/welcome_message"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/welcome_message"
		android:textColor="#000000"
		android:gravity="center"
		android:layout_alignParentLeft="true"
		android:layout_centerVertical="true"
		android:layout_margin="15dp"></TextView>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:paddingLeft="15dp"
		android:paddingRight="15dp"
		android:paddingBottom="15dp">
		<RelativeLayout
			android:id="@+id/rates_button"
			android:layout_height="fill_parent"
			android:background="@drawable/main_menu_button"
			android:layout_width="fill_parent"
			android:layout_margin="5dp"
			android:clickable="true"
			android:layout_weight="1">
			<TextView
				android:id="@+id/rates_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/rates"
				android:textColor="#000000"
				android:layout_alignParentLeft="true"
				android:layout_centerVertical="true"
				android:paddingLeft="15dp"></TextView>
			<ImageView
				android:layout_height="wrap_content"
				android:id="@+id/imageView1"
				android:background="@drawable/main_menu_button_image"
				android:src="@drawable/rates"
				android:layout_width="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:layout_marginRight="20dp"></ImageView>
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/lessons_button"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:background="@drawable/main_menu_button"
			android:layout_margin="5dp"
			android:clickable="true"
			android:layout_weight="1">
			<TextView
				android:id="@+id/lessons_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/lessons"
				android:textColor="#000000"
				android:layout_alignParentLeft="true"
				android:layout_centerVertical="true"
				android:paddingLeft="15dp"></TextView>
			<ImageView
				android:layout_height="wrap_content"
				android:id="@+id/imageView1"
				android:background="@drawable/main_menu_button_image"
				android:src="@drawable/lessons"
				android:layout_width="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:layout_marginRight="20dp"></ImageView>
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/requests_button"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:background="@drawable/main_menu_button"
			android:layout_margin="5dp"
			android:clickable="true"
			android:layout_weight="1">
			<TextView
				android:id="@+id/requests_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/requests"
				android:textColor="#000000"
				android:layout_alignParentLeft="true"
				android:layout_centerVertical="true"
				android:paddingLeft="15dp"></TextView>
			<ImageView
				android:layout_height="wrap_content"
				android:id="@+id/imageView1"
				android:background="@drawable/main_menu_button_image"
				android:src="@drawable/requests"
				android:layout_width="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:layout_marginRight="20dp"></ImageView>
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/preferences_button"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:background="@drawable/main_menu_button"
			android:layout_margin="5dp"
			android:clickable="true"
			android:layout_weight="1">
			<TextView
				android:id="@+id/preferences_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/preferences"
				android:textColor="#000000"
				android:layout_alignParentLeft="true"
				android:layout_centerVertical="true"
				android:paddingLeft="15dp"></TextView>
			<ImageView
				android:layout_height="wrap_content"
				android:id="@+id/imageView1"
				android:background="@drawable/main_menu_button_image"
				android:src="@drawable/preferences"
				android:layout_width="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:layout_marginRight="20dp"></ImageView>
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>